--- a/LeetCode_150.ipynb
+++ b/LeetCode_150.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvXZALaRuaAsKAZ3A/t0nC",
+      "authorship_tag": "ABX9TyOAvtBkab/1B84b3ft1HMLv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,16 +210,21 @@
         "class Solution:\n",
         "    def removeDuplicates(self, nums: List[int]) -> int:\n",
         "        i = 1\n",
-        "        for n in nums:\n",
-        "            if n > nums[i - 1]:\n",
-        "                nums[i] = n\n",
+        "        count = 1\n",
+        "        for j in range(1, len(nums)):\n",
+        "            if nums[j] == nums[j - 1]:\n",
+        "                count += 1\n",
+        "            else:\n",
+        "                count = 1\n",
+        "            if count <= 2:\n",
+        "                nums[i] = nums[j]\n",
         "                i += 1\n",
         "        return i"
       ],
       "metadata": {
         "id": "IjHqdhyGV82g"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -232,19 +237,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FG9PUIC8V9tb",
-        "outputId": "2864aa2b-6c4e-4432-fd29-2008807b50aa"
+        "outputId": "0445be20-d90b-495b-a5a2-d24c390c6eb3"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3"
+              "5"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     }
